# midi-sketch

./: .gitignore  CMakeLists.txt  LICENSE-COMMERCIAL  Makefile  README.md  README_ja.md  biome.json  output.mid  package.json  tsconfig.json  vitest.config.ts
src/: CMakeLists.txt  cli_main.cpp  midisketch.cpp  midisketch.h  midisketch_c.cpp  midisketch_c.h
src/analysis/: dissonance.cpp  dissonance.h
src/cli/: args.cpp  args.h  display_helpers.cpp  display_helpers.h  generate_mode.cpp  generate_mode.h  input_mode.cpp  input_mode.h  regenerate_mode.cpp  regenerate_mode.h  validate_mode.cpp  validate_mode.h
src/core/: arpeggio_types.h  arrangement.cpp  arrangement.h  basic_types.h  chord.cpp  chord.h  chord_progression_tracker.cpp  chord_progression_tracker.h  chord_utils.cpp  chord_utils.h  collision_resolver.cpp  collision_resolver.h  composition_strategy.cpp  composition_strategy.h  config_converter.cpp  config_converter.h  coordinator.cpp  coordinator.h  density_transformer.h  emotion_curve.cpp  emotion_curve.h  euclidean_rhythm.cpp  euclidean_rhythm.h  generator.cpp  generator.h  harmonic_rhythm.h  harmony_context.cpp  harmony_context.h  harmony_coordinator.cpp  harmony_coordinator.h  hook_utils.h  i_chord_lookup.h  i_collision_detector.h  i_harmony_context.h  i_harmony_coordinator.h  i_note_registration.h  i_track_base.cpp  i_track_base.h  json_helpers.h  melody_embellishment.cpp  (+82 more)
src/instrument/common/: performer_types.h  physical_performer.h
src/instrument/drums/: drum_performer.cpp  drum_performer.h  drum_types.h
src/instrument/fretted/: bass_model.cpp  bass_model.h  fingering.h  fretted_instrument.h  fretted_instrument_base.cpp  fretted_instrument_base.h  fretted_note_factory.cpp  fretted_note_factory.h  fretted_types.h  guitar_model.cpp  guitar_model.h  playability.h
src/instrument/keyboard/: keyboard_instrument.h  keyboard_note_factory.cpp  keyboard_note_factory.h  keyboard_types.h  piano_model.cpp  piano_model.h
src/midi/: byte_order.h  midi2_format.h  midi2_reader.cpp  midi2_reader.h  midi2_writer.cpp  midi2_writer.h  midi_reader.cpp  midi_reader.h  midi_validator.cpp  midi_validator.h  midi_writer.cpp  midi_writer.h  track_config.h  ump.cpp  ump.h
src/track/: arpeggio.cpp  arpeggio.h  aux_track.cpp  aux_track.h  bass.cpp  bass.h  chord_track.cpp  chord_track.h  drums.cpp  drums.h  melody_designer.cpp  melody_designer.h  motif.cpp  motif.h  phrase_cache.h  phrase_variation.cpp  phrase_variation.h  se.cpp  se.h  track.cpp  track.h  vocal.cpp  vocal.h  vocal_analysis.cpp  vocal_analysis.h  vocal_helpers.cpp  vocal_helpers.h
src/track/chord/: bass_coordination.cpp  bass_coordination.h  chord_rhythm.h  voice_leading.cpp  voice_leading.h  voicing_generator.cpp  voicing_generator.h
src/track/chord_track/: bass_coordination.cpp  bass_coordination.h  chord_rhythm.h  voice_leading.cpp  voice_leading.h  voicing_generator.cpp  voicing_generator.h
src/track/drums/: beat_processors.cpp  beat_processors.h  (+13 more)
tests/: CMakeLists.txt
tests/analysis/: dissonance_test.cpp  non_diatonic_detection_test.cpp
tests/api/: c_api_test.cpp  events_json_test.cpp
tests/core/: arrangement_test.cpp  basic_types_test.cpp  call_test.cpp  chord_boundary_test.cpp  chord_progression_tracker_test.cpp  chord_test.cpp  chord_theory_improvements_test.cpp  chord_utils_test.cpp  constraint_pipeline_test.cpp  coordinator_test.cpp  emotion_curve_test.cpp  emotion_curve_velocity_test.cpp  euclidean_rhythm_test.cpp  exit_pattern_test.cpp  generator_di_test.cpp  generator_dynamics_test.cpp  generator_motif_test.cpp  generator_state_test.cpp  generator_test.cpp  generator_vocal_first_test.cpp  generator_vocal_test.cpp  genre_expansion_test.cpp  guide_chord_test.cpp  harmonic_rhythm_subdivision_test.cpp  harmonic_rhythm_test.cpp  harmony_context_debug_test.cpp  harmony_integration_test.cpp  harmony_interface_test.cpp  hook_utils_test.cpp  json_helpers_test.cpp  layer_schedule_test.cpp  melody_embellishment_test.cpp  melody_evaluator_test.cpp  melody_templates_test.cpp  midi_track_test.cpp  modulation_bgm_test.cpp  modulation_calculator_test.cpp  modulation_vocal_range_test.cpp  motif_motion_test.cpp  motif_riff_coherence_test.cpp  (+32 more)
tests/instrument/: drum_performer_test.cpp  keyboard_model_test.cpp
tests/integration/: cross_paradigm_test.cpp  dissonance_diagnostic_test.cpp  dissonance_integration_test.cpp
tests/midi/: cc_event_test.cpp  midi2_reader_test.cpp  midi2_writer_test.cpp  midi_reader_test.cpp  midi_validator_test.cpp  midi_writer_smf1_test.cpp  midi_writer_test.cpp  ump_test.cpp
tests/test_helpers/: note_event_test_helper.h
tests/test_support/: clash_analysis_helper.h  collision_test_helper.h  generator_test_fixture.h  stub_harmony_context.h  test_constants.h  test_helpers.h
tests/track/: arpeggio_test.cpp  aux_chorus_behavior_test.cpp  aux_dissonance_regression_test.cpp  aux_test.cpp  aux_track_test.cpp  bass_chord_tone_test.cpp  bass_diatonic_test.cpp  bass_dissonance_regression_test.cpp  bass_integration_test.cpp  bass_music_theory_test.cpp  bass_pattern_test.cpp  bass_physical_model_test.cpp  bass_test.cpp  bass_theory_test.cpp  bass_with_vocal_test.cpp  bpm_scaling_test.cpp  chord_collision_regression_test.cpp  chord_merge_characterization_test.cpp  chord_track_test.cpp  chord_with_context_test.cpp  dissonance_fixes_test.cpp  drums_test.cpp  fretted_instrument_test.cpp  generator_iteration_snapshot_test.cpp  guitar_collision_test.cpp  guitar_test.cpp  leap_resolution_test.cpp  melody_designer_test.cpp  melody_utils_test.cpp  mora_rhythm_test.cpp  motif_test.cpp  motif_vocal_coordination_test.cpp  phrase_ending_test.cpp  phrase_plan_test.cpp  phrase_planner_test.cpp  phrase_tail_rest_test.cpp  pitch_crossing_regression_test.cpp  rhythm_sync_test.cpp  se_test.cpp  swing_control_test.cpp  (+5 more)
tests/wasm/: basic.test.ts  builder.test.ts  call-system.test.ts  cli-wasm-parity.test.ts  exhaustive.test.ts  generation.test.ts  index.test.ts  midisketch.test.ts  new-params.test.ts  piano-roll.test.ts  struct-roundtrip.test.ts  style-preset.test.ts  test-helpers.ts  vocal.test.ts
(+158 files in other folders)
